	'rivendell-install-rhel7.spec.in'.
2016-07-08 Fred Gleason <fredg@paravelsystems.com>
	* Added 'common/no_screen_blank.conf' and
	'common/paravel_support.pdf'.
	* Tweaked install on RHEL 6.
	* Added 'centos6/install_rivendell_devel.sh'.
2016-07-08 Fred Gleason <fredg@paravelsystems.com>
	* Tweaked install on RHEL 7.
2016-07-08 Fred Gleason <fredg@paravelsystems.com>
	* Enabled startup of the ntpd service in
	'centos7/install_rivendell.sh'.
2016-07-09 Fred Gleason <fredg@paravelsystems.com>
	* Added 'docs/rivendell-install-rhel6.xml'.
	* Added 'docs/rivendell-install-rhel7.xml'.
2016-07-09 Fred Gleason <fredg@paravelsystems.com>
	* Removed 'INSTALL-RHEL6'.
	* Removed 'INSTALL-RHEL7'.
2016-07-09 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make web' target.
2016-07-10 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.7.0.
2016-07-14 Fred Gleason <fredg@paravelsystems.com>
	* Added 'kernel-devel' to the set of installed packages in
	'centos7/install_rivendell_devel.sh'.
	* Added 'kernel-devel' to the set of installed packages in
	'centos6/install_rivendell_devel.sh'.
2016-07-14 Fred Gleason <fredg@paravelsystems.com>
	* Added 'rpm-sign' to the set of installed packages in
	'centos7/install_rivendell_devel.sh'.
	* Added 'rpm-sign' to the set of installed packages in
	'centos6/install_rivendell_devel.sh'.
2016-07-15 Fred Gleason <fredg@paravelsystems.com>
	* Added 'cifs-utils' to the set of installed packages in
	'centos7/install_rivendell.sh'.
	* Added 'nfs-utils' to the set of installed packages in
	'centos7/install_rivendell.sh'.
2016-07-15 Fred Gleason <fredg@paravelsystems.com>
	* Removed 'rpm-sign' from the set of installed packages in
	'centos6/install_rivendell_devel.sh'.
2016-07-15 Fred Gleason <fredg@paravelsystems.com>
	* Added 'ssvnc' to the set of installed packages in
	'centos6/install_rivendell.sh'.
	* Added 'ssvnc' to the set of installed packages in
	'centos7/install_rivendell.sh'.