@@ -1,3 +1,5 @@
+*.html
+*.pdf
 *.rpm
 *.tar.gz
 *.spec
